Updating Amsterdam colors to match brand (#4284)
* Updating Amsterdam colors to match brand
* Updated dark colors too
* Adding text button style to docs
* Fixing text-selection and focus backgrounds
* Style all disabled EuiButtons the same (non-fill)

--- a/src/global_styling/functions/_colors.scss
+++ b/src/global_styling/functions/_colors.scss
@@ -128,3 +128,8 @@
 @function makeGraphicContrastColor($color, $background: $euiPageBackgroundColor) {
   @return makeHighContrastColor($color, $background, 3);
 }
+
+// Disabled content only needs a contrast of at least 2 because there is no interaction available
+@function makeDisabledContrastColor($color, $background: $euiPageBackgroundColor) {
+  @return makeHighContrastColor($color, $background, 2);
+}
