--- a/src/themes/eui-amsterdam/global_styling/variables/_buttons.scss
+++ b/src/themes/eui-amsterdam/global_styling/variables/_buttons.scss
@@ -1,2 +1,3 @@
-$euiButtonColorDisabled: tintOrShade($euiTextColor, 75%, 70%);
+$euiButtonColorDisabled: $euiColorDisabled;
+$euiButtonColorDisabledText: $euiColorDisabledText;
 $euiButtonDefaultTransparency: .8;
