--- a/src/themes/eui-amsterdam/eui_amsterdam_colors_light.scss
+++ b/src/themes/eui-amsterdam/eui_amsterdam_colors_light.scss
@@ -1,15 +1,28 @@
 // This extra import allows any variables that are created via functions to work when loaded into JS
 @import '../../global_styling/variables/colors';
 
-$euiColorPrimary:     #006DE4;
-$euiColorSecondary:   #00BFB3;
-$euiColorAccent:      #FC358E;
+// Core
+$euiColorPrimary: #07C;
+$euiColorSecondary: #00BFB3;
+$euiColorAccent: #F04E98;
+
+// Status
 $euiColorSuccess: $euiColorSecondary;
+$euiColorWarning: #FEC514;
+$euiColorDisabled: #ABB4C4;
+
+// Grays are the same
+
+// Backgrounds
+$euiPageBackgroundColor: tint($euiColorLightestShade, 50%);
+$euiColorHighlight: tint($euiColorWarning, 90%);
 
 // Contrasty text variants
+$euiTextSubduedColor: $euiColorDarkShade;
 $euiColorPrimaryText: makeHighContrastColor($euiColorPrimary);
 $euiColorSecondaryText: makeHighContrastColor($euiColorSecondary);
 $euiColorAccentText: makeHighContrastColor($euiColorAccent);
-
+$euiColorWarningText: makeHighContrastColor($euiColorWarning);
+$euiColorDisabledText: makeDisabledContrastColor($euiColorDisabled);
+$euiColorSuccessText: $euiColorSecondaryText;
 $euiLinkColor: $euiColorPrimaryText;
-$euiFocusBackgroundColor: transparentize($euiColorPrimary, .8);
