--- a/src/themes/eui-amsterdam/overrides/_button.scss
+++ b/src/themes/eui-amsterdam/overrides/_button.scss
@@ -9,10 +9,13 @@
   // Added exclusion of the `ghost` type of button
   // so as not to override those specific styles from default theme
   // And the only style that needs to change is the non-filled version
-  &.euiButton-isDisabled:not(.euiButton--ghost):not(.euiButton--fill) {
-    $backgroundColorSimulated: mix($euiPageBackgroundColor, $euiButtonColorDisabled, 70%);
-    background-color: transparentize($euiButtonColorDisabled, .7);
-    color: makeHighContrastColor($euiButtonColorDisabled, $backgroundColorSimulated, 2);
+  &.euiButton-isDisabled:not(.euiButton--ghost) {
+    &,
+    &:hover {
+      $backgroundColorSimulated: mix($euiPageBackgroundColor, $euiButtonColorDisabled, 90%);
+      background-color: transparentize($euiButtonColorDisabled, .9);
+      color: makeDisabledContrastColor($euiButtonColorDisabled, $backgroundColorSimulated);
+    }
   }
 }
 
@@ -51,9 +54,12 @@
 }
 
 // Fix ghost/disabled look specifically
-.euiButton.euiButton-isDisabled.euiButton--ghost:not(.euiButton--fill) {
+.euiButton.euiButton-isDisabled.euiButton--ghost,
+// adding fill type to override default theme
+.euiButton.euiButton-isDisabled.euiButton--ghost.euiButton--fill {
   &,
   &:focus {
-    background-color: transparentize($euiButtonColorGhostDisabled, .7);
+    color: $euiButtonColorGhostDisabled;
+    background-color: transparentize($euiButtonColorGhostDisabled, .9);
   }
 }
