[EuiMarkdownEditor] Fix styling for Amsterdam  (#4289)
* Adding amsterdam styles for markdown editor

* CL and removing outline for edge, firefox and safari.

* Update src/themes/eui-amsterdam/overrides/_index.scss

Co-authored-by: Caroline Horn <549577+cchaos@users.noreply.github.com>

* Addressing PR review

* CL

Co-authored-by: Caroline Horn <549577+cchaos@users.noreply.github.com>

--- a/src/themes/eui-amsterdam/overrides/_index.scss
+++ b/src/themes/eui-amsterdam/overrides/_index.scss
@@ -12,6 +12,7 @@
 @import 'header';
 @import 'image';
 @import 'mark';
+@import 'markdown_editor';
 @import 'modal';
 @import 'overlay_mask';
 @import 'popover';
