Fix dropdown styles in Amsterdam (#4301)
* Reusing EuiPopover panel classes inside EuiComboBox
* EuiSuperSelect now using EuiInputPopover
* Remove popover animation if attached
* Fix body line height in reset
* Fix date picker dropdown styles
* Removed breakpoint hiding time picker

--- a/src/components/combo_box/_combo_box.scss
+++ b/src/components/combo_box/_combo_box.scss
@@ -19,6 +19,7 @@
     @include euiFormControlSize(auto, $includeAlternates: true);
     padding: $euiSizeXS $euiSizeS;
     display: flex; /* 1 */
+    outline: none; // Fixes an intermittent focus ring in Firefox
 
     // sass-lint:disable-block mixins-before-declarations
     // to override the padding added above
