--- a/src/components/date_picker/_date_picker.scss
+++ b/src/components/date_picker/_date_picker.scss
@@ -121,7 +121,7 @@
   &[data-placement^="top"] {
     @include euiBottomShadowFlat;
 
-    border-radius: $euiBorderRadius $euiBorderRadius 0 0 !important;
+    border-radius: $euiBorderRadius $euiBorderRadius 0 0;
 
     // .react-datepicker__triangle {
     // }
@@ -661,21 +661,6 @@
 
 .react-datepicker__focusTrap {
   display: flex;
-}
-
-// We drop the time picker on mobile. They can still type in the time directly.
-@include euiBreakpoint('xs','s') {
-
-  // This resizes EUI's normal form control to be the width of the calendar
-  .euiDatePicker--inline {
-    max-width: $euiDatePickerCalendarWidth;
-    display: block;
-  }
-
-  // This hides the time entirely
-  .react-datepicker__time-container {
-    display: none;
-  }
 }
 
 // The below is for the portal version of react-datepicker which we do not use.
