--- a/src/themes/eui-amsterdam/overrides/_index.scss
+++ b/src/themes/eui-amsterdam/overrides/_index.scss
@@ -5,6 +5,7 @@
 @import 'call_out';
 @import 'code_block';
 @import 'context_menu';
+@import 'date_picker';
 @import 'filter_group';
 @import 'form_control_layout';
 @import 'form_control_layout_delimited';
