[EuiComment] Remove shadow in Amsterdam (#4321)

--- a/src/components/comment_list/_comment_event.scss
+++ b/src/components/comment_list/_comment_event.scss
@@ -25,7 +25,7 @@
 }
 
 .euiCommentEvent--regular {
-  @include euiBottomShadowMedium;
+  @include euiSlightShadow;
   border-radius: $euiBorderRadius;
   border: $euiBorderThin;
 
