[EuiButtonEmpty] Adjust font size in Amsterdam and add more colors (#4325)

--- a/src/components/button/button_empty/_button_empty.scss
+++ b/src/components/button/button_empty/_button_empty.scss
@@ -69,11 +69,13 @@
 
 // Modifier naming and colors.
 $euiButtonEmptyTypes: (
-  primary: $euiColorPrimary,
-  danger: $euiColorDanger,
+  primary: $euiColorPrimaryText,
+  danger: $euiColorDangerText,
   disabled: $euiButtonColorDisabledText,
   ghost: $euiColorGhost,
   text: $euiTextColor,
+  success: $euiColorSecondaryText,
+  warning: $euiColorWarningText,
 );
 
 // Create button modifiers based upon the map.
