--- a/src/themes/eui-amsterdam/overrides/_button_empty.scss
+++ b/src/themes/eui-amsterdam/overrides/_button_empty.scss
@@ -7,6 +7,10 @@
     // so that they don't appear completely rounded
     border-radius: $euiBorderRadius * .667;
   }
+
+  &.euiButtonEmpty--xSmall {
+    font-size: $euiFontSizeXS;
+  }
 }
 
 @each $name, $color in $euiButtonTypes {
