--- a/src/themes/eui-amsterdam/overrides/_index.scss
+++ b/src/themes/eui-amsterdam/overrides/_index.scss
@@ -12,6 +12,7 @@
 @import 'form_control_layout_delimited';
 @import 'form_controls';
 @import 'header';
+@import 'list_group_item';
 @import 'image';
 @import 'mark';
 @import 'markdown_editor';
