[Amsterdam] Small styling adjustments in tooltips (#4353)
* adjust padding in tooltip
* reduce border-radius in EuiRange's tooltip

--- a/src/themes/eui-amsterdam/overrides/_index.scss
+++ b/src/themes/eui-amsterdam/overrides/_index.scss
@@ -20,5 +20,7 @@
 @import 'overlay_mask';
 @import 'popover';
 @import 'progress';
+@import 'range';
 @import 'text';
 @import 'toast';
+@import 'tooltip';
