[EuiSteps] Updates for Amsterdam and added `disabled` and `loading` states (#4338)
* Adding `loading` status to EuiStep
* Style EuiStep for Amsterdam

--- a/src/themes/eui-amsterdam/overrides/_index.scss
+++ b/src/themes/eui-amsterdam/overrides/_index.scss
@@ -21,6 +21,7 @@
 @import 'popover';
 @import 'progress';
 @import 'range';
+@import 'steps';
 @import 'text';
 @import 'toast';
 @import 'tooltip';
