--- a/src/components/steps/_step_number.scss
+++ b/src/components/steps/_step_number.scss
@@ -2,6 +2,7 @@
   @include createStepsNumber;
 
   .euiStepNumber__icon {
+    vertical-align: middle;
     position: relative;
     top: -2px;
   }
@@ -15,16 +16,32 @@
   }
 
   &--complete {
-    // Thicken the checkmark but adding a slight stroke.
+    // Thicken the checkmark by adding a slight stroke.
     .euiStepNumber__icon {
       stroke: currentColor;
       stroke-width: .5px;
     }
   }
 
+  @include euiCanAnimate {
+    &--complete,
+    &--warning,
+    &--danger {
+      animation: euiGrow $euiAnimSpeedFast $euiAnimSlightBounce;
+    }
+  }
+
+  &--loading {
+    background: transparent;
+  }
+
   &.euiStepNumber-isHollow {
     background-color: transparent;
     border: 2px solid $euiColorPrimary;
+
+    .euiStepNumber__number {
+      display: none;
+    }
   }
 
   // Create modifiers based upon the map
@@ -39,10 +56,6 @@
 
       color: $textColor;
       background-color: $backgroundColor;
-
-      &.euiStepNumber-isHollow {
-        border-color: $color;
-      }
     }
   }
 }
