[EuiDataGrid] Add sorting icon if the column is sorted (#4343)
* [EuiDataGrid] Add sorting direction icon indicator if the column is sorted

* Show the sorting direction arrows even if the column actions are disabled

* minor styling updates

* Update changelog with the change

Co-authored-by: Dave Snider <dave.snider@gmail.com>

--- a/src/components/datagrid/_data_grid_header_row.scss
+++ b/src/components/datagrid/_data_grid_header_row.scss
@@ -53,6 +53,10 @@
       outline: none;
     }
 
+    .euiDataGridHeaderCell__sortingArrow {
+      margin-right: $euiSizeXS;
+    }
+
     .euiDataGridHeaderCell__content {
       @include euiTextTruncate;
       overflow: hidden;
