[EuiResizableContainer] Allow collapsible panels (#3978)
* will add custom icons

* playing with props

* adding example files

* working on the example

* example is dynamic

* cleaner example

* add class to button

* cl

* fix dom structure warnings

* refactor; reducer pattern

* snapshots; clean up

* vertical collapsibles; combined registration

* WIP

* WIP: showOnFocus

* POC: mode prop

* memoize actions; toggle button placement

* clean up

* clean up

* better vertical collapsibles

* external toggle example

* better resizer focus state; fallback redistribution logic

* add shadow to toggle button

* shift button when collapsed; blur on mouse click

* clean up; inline side-effects

* cleaner examples

* snapshots

* docs

* adjustments for collapsible options

* clean up actions

* more docs, snippets

* remove custom icons; update example

* account for more external toggling situations; update rotated icons

* larger click area for collapsed toggle button

* Using and EuiPanel as the `.euiResizablePanel__content`

- Added `paddingSize` to EuiPage

* Fixing the buttons
- Removed size option from resizable button and changed to `0` width via negative margins
- Updated toggle button positioning

Still need to update examples and tests

* address padding; collapsedContent

* collapsedContent -> collapsedButton

* new icons

* clean up

* position prop; remove collapsedButton

* Consolidate and organize a few things
- Made the EuiCollapsiblePanel and extension of EuiPanel with `wrapperProps` and `wrapperPadding` instead of the other way around
- Added `left | right` positions specifically for the vertical layout
- Created external EuiResizableCollapseButton for easier maintenance
- Continue to show the EuiPanel to keep the visuals when collapsed (if showing collapsed button)

- Fixed up examples/docs

* 0 size on collapse

* allow toggle blur

* maintain focus;

--- a/src/components/page/_page.scss
+++ b/src/components/page/_page.scss
@@ -1,6 +1,5 @@
 .euiPage {
   display: flex;
-  padding: $euiSize;
   background-color: $euiPageBackgroundColor;
 
   &--restrictWidth-default,
@@ -15,6 +14,12 @@
 
   @include euiBreakpoint('xs', 's') {
     flex-direction: column;
-    // padding: 0; temporarily removing
+  }
+}
+
+// Uses the same values as EuiPanel
+@each $modifier, $amount in $euiPanelPaddingModifiers {
+  .euiPage--#{$modifier} {
+    padding: $amount;
   }
 }
