--- a/src/components/resizable_container/_resizable_button.scss
+++ b/src/components/resizable_container/_resizable_button.scss
@@ -3,6 +3,7 @@
 .euiResizableButton {
   position: relative;
   flex-shrink: 0;
+  z-index: $euiZLevel1;
 
   &:before,
   &:after {
@@ -22,11 +23,14 @@
 
   &.euiResizableButton--horizontal {
     cursor: col-resize;
+    width: $euiResizableButtonSize;
+    margin-left: -($euiResizableButtonSize / 2);
+    margin-right: -($euiResizableButtonSize / 2);
 
     &:before,
     &:after {
       width: 1px;
-      height: 12px;
+      height: $euiSizeM;
     }
 
     &:before {
@@ -40,10 +44,13 @@
 
   &.euiResizableButton--vertical {
     cursor: row-resize;
+    height: $euiResizableButtonSize;
+    margin-top: -($euiResizableButtonSize / 2);
+    margin-bottom: -($euiResizableButtonSize / 2);
 
     &:before,
     &:after {
-      width: 12px;
+      width: $euiSizeM;
       height: 1px;
     }
 
@@ -57,7 +64,7 @@
   }
 
   //Lighten the "grab" icon on :hover
-  &:hover {
+  &:hover:not(:disabled) {
     &:before,
     &:after {
       background-color: $euiColorMediumShade;
@@ -66,7 +73,7 @@
   }
 
   //Add a transparent background to the container and emphasis the "grab" icon with primary color on :focus
-  &:focus {
+  &:focus:not(:disabled) {
     background-color: transparentize($euiColorPrimary, .9);
 
     &:before,
@@ -83,8 +90,8 @@
   }
 
   //Morph the "grab" icon into a fluid 2px straight line on :hover and :focus
-  &:hover,
-  &:focus {
+  &:hover:not(:disabled),
+  &:focus:not(:disabled) {
     &.euiResizableButton--horizontal {
       &:before,
       &:after {
@@ -115,17 +122,8 @@
       }
     }
   }
-}
 
-//Generate modifier classes that control the size of the resizer
-@each $modifier, $amount in $euiResizableButtonSizeModifiers {
-  .euiResizableButton--#{$modifier} {
-    &.euiResizableButton--vertical {
-      height: $amount;
-    }
-
-    &.euiResizableButton--horizontal {
-      width: $amount;
-    }
+  &:disabled {
+    display: none !important; // sass-lint:disable-line no-important
   }
 }
