--- a/src/components/resizable_container/_index.scss
+++ b/src/components/resizable_container/_index.scss
@@ -1,4 +1,5 @@
 @import 'variables';
 @import 'resizable_button';
+@import 'resizable_collapse_button';
 @import 'resizable_container';
 @import 'resizable_panel';
