[EuiFormControlLayout]	Use smaller icons when in compressed size (#4374)
* adjust icons for compressed
* Changing some new props to `size` and reducing size of clear button too

Co-authored-by: Caroline Horn <549577+cchaos@users.noreply.github.com>
Co-authored-by: cchaos <caroline.horn@elastic.co>

--- a/src/components/form/form_control_layout/_form_control_layout_clear_button.scss
+++ b/src/components/form/form_control_layout/_form_control_layout_clear_button.scss
@@ -1,3 +1,7 @@
 .euiFormControlLayoutClearButton {
   @include euiFormControlLayoutClearIcon('.euiFormControlLayoutClearButton__icon');
 }
+
+.euiFormControlLayoutClearButton--small {
+  @include euiFormControlLayoutClearIcon('.euiFormControlLayoutClearButton__icon', $size: 's');
+}
