--- a/src/components/form/form_control_layout/_form_control_layout_custom_icon.scss
+++ b/src/components/form/form_control_layout/_form_control_layout_custom_icon.scss
@@ -1,9 +1,6 @@
 .euiFormControlLayoutCustomIcon {
   pointer-events: none;
-
-  .euiFormControlLayoutCustomIcon__icon {
-    transform: translateY(-1px);
-  }
+  font-size: 0; // ensures the icon stays vertically centered
 }
 
 .euiFormControlLayoutCustomIcon--clickable {
