[EuiMarkdownEditor] Better support to extend to full height (#4245)
* Better support extend the md editor to full height

* Adding previewClassName

* Adding tests for previewClassName

* CL number

* Update src/components/markdown_editor/markdown_editor.tsx

Co-authored-by: Caroline Horn <549577+cchaos@users.noreply.github.com>

* Adding height prop full and resizing preview area based on  textarea size.

* Adding EuiResizeObserver.

* Typo

* Adding missing file from merge

* Adding autoExpandPreview

* Small fix

* CL

* Calculating toolbar and footer heights from their refs

* Removed unused Sass file

* Types

* Small fixes

* Account fully for markdown preview's border and margin when resizing to fit content

* Update src/components/markdown_editor/markdown_editor.tsx

Co-authored-by: Chandler Prall <chandler.prall@gmail.com>

* Removing unnecessary code

* Respond to runtime changes in markdown footer height

* Adding variable euiMarkdownEditorMinHeight

* Improving snippets

* Snippet

Co-authored-by: Caroline Horn <549577+cchaos@users.noreply.github.com>
Co-authored-by: Chandler Prall <chandler.prall@gmail.com>

--- a/src/components/markdown_editor/_index.scss
+++ b/src/components/markdown_editor/_index.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+@import 'markdown_editor';
 @import 'markdown_editor_drop_zone';
 @import 'markdown_format';
 @import 'markdown_editor_footer';
