--- a/src/components/markdown_editor/_markdown_editor_drop_zone.scss
+++ b/src/components/markdown_editor/_markdown_editor_drop_zone.scss
@@ -2,8 +2,7 @@
   display: flex;
   position: relative;
   flex-direction: column;
-  min-height: 150px;
-  max-height: 600px;
+  min-height: $euiMarkdownEditorMinHeight;
 
   &__input {
     position: absolute;
