--- a/src/components/markdown_editor/_markdown_editor_preview.scss
+++ b/src/components/markdown_editor/_markdown_editor_preview.scss
@@ -1,6 +1,7 @@
 .euiMarkdownEditorPreview {
   @include euiScrollBar;
-  height: 150px;
+  background: $euiColorEmptyShade;
+  min-height: $euiMarkdownEditorMinHeight;
   overflow-y: auto;
   border: $euiBorderThin;
   padding: $euiSizeM;
