--- a/src/components/markdown_editor/_markdown_editor_text_area.scss
+++ b/src/components/markdown_editor/_markdown_editor_text_area.scss
@@ -3,7 +3,7 @@
   @include euiScrollBar;
   width: 100%;
   height: 100%;
-  min-height: 150px;
+  min-height: $euiMarkdownEditorMinHeight;
   padding: $euiSizeM;
   border: $euiBorderThin;
   border-bottom: none;
