--- a/src/components/form/form_control_layout/_form_control_layout.scss
+++ b/src/components/form/form_control_layout/_form_control_layout.scss
@@ -38,7 +38,7 @@
   .euiFormControlLayout__append {
     @include euiTextTruncate;
     flex-shrink: 0;
-    height: 100%;
+    height: auto;
     border-radius: 0;
 
     // ICONS
