[EuiContextMenu] Add size prop (#4409)
Co-authored-by: cchaos <caroline.horn@elastic.co>
Co-authored-by: Greg Thompson <thompson.glowe@gmail.com>

--- a/src/components/context_menu/_context_menu_panel.scss
+++ b/src/components/context_menu/_context_menu_panel.scss
@@ -45,6 +45,11 @@
   &:enabled:focus {
     text-decoration: underline;
   }
+
+  &--small {
+    @include euiPopoverTitle('s');
+    padding: ($euiSizeS * .75) $euiSizeS;
+  }
 }
 
 @keyframes euiContextMenuPanelTxInLeft {
