--- a/src/themes/eui-amsterdam/global_styling/mixins/_index.scss
+++ b/src/themes/eui-amsterdam/global_styling/mixins/_index.scss
@@ -19,5 +19,6 @@
 @import '../../../../global_styling/mixins/panel';
 @import 'panel';
 @import '../../../../global_styling/mixins/popover';
+@import 'popover';
 @import '../../../../global_styling/mixins/range';
 @import '../../../../global_styling/mixins/tool_tip';
