--- a/src/components/context_menu/_context_menu_item.scss
+++ b/src/components/context_menu/_context_menu_item.scss
@@ -24,6 +24,14 @@
       text-decoration: none;
     }
   }
+
+  &--small {
+    padding: ($euiSizeS * .75) $euiSizeS;
+
+    .euiContextMenuItem__text {
+      @include euiFontSizeS;
+    }
+  }
 }
 
 .euiContextMenuItem__inner {
