[EuiHealth] Add textSize prop (#4420)
* added inherit prop for EuiHealth

* updated CHANGELOG

* Adding textSize prop

* CL

* docs props

* Renaming doc sources

* Adding props tests

* Renaming className

* Update CHANGELOG.md

Co-authored-by: Caroline Horn <549577+cchaos@users.noreply.github.com>

* Update src-docs/src/views/health/health_example.js

Co-authored-by: Caroline Horn <549577+cchaos@users.noreply.github.com>

* Update src-docs/src/views/health/health_example.js

Co-authored-by: Caroline Horn <549577+cchaos@users.noreply.github.com>

* Update src/components/health/health.tsx

Co-authored-by: Caroline Horn <549577+cchaos@users.noreply.github.com>

* Addressing PR review

* Update src/components/health/health.tsx

Co-authored-by: Caroline Horn <549577+cchaos@users.noreply.github.com>

Co-authored-by: miukimiu <elizabet.oliveira@elastic.co>
Co-authored-by: Caroline Horn <549577+cchaos@users.noreply.github.com>

--- a/src/components/health/_health.scss
+++ b/src/components/health/_health.scss
@@ -1,4 +1,19 @@
 .euiHealth {
-  @include euiFontSizeS;
   display: inline-block;
+}
+
+.euiHealth--textSizeXS {
+  @include euiFontSizeXS;
+}
+
+.euiHealth--textSizeS {
+  @include euiFontSizeS;
+}
+
+.euiHealth--textSizeM {
+  @include euiFontSizeM;
+}
+
+.euiHealth--textSizeInherit {
+  font-size: inherit;
 }
