Revert "[EuiFormControlLayout] Fixed heights of append/prepend (#4410)" (#4432)
* Revert "[EuiFormControlLayout] Fixed heights of append/prepend (#4410)"

This reverts commit 43e925f35fde5508aa49d5afa8f8b4e6ec5d5b64.

* changelog tweak

* lint fix

--- a/src/components/form/form_control_layout/_form_control_layout.scss
+++ b/src/components/form/form_control_layout/_form_control_layout.scss
@@ -38,7 +38,7 @@
   .euiFormControlLayout__append {
     @include euiTextTruncate;
     flex-shrink: 0;
-    height: auto;
+    height: 100%;
     border-radius: 0;
 
     // ICONS
