[Feature Notification] Add EuiFlyout paddingSize prop (#4448)
* Added paddingSize prop

* wip

* medium footer size

* Changing example to medium padding

* Make example interactive

* Update src/components/flyout/flyout.tsx

Co-authored-by: Caroline Horn <549577+cchaos@users.noreply.github.com>

* Addressing PR review

* Moving close button styles to outside of loop

Co-authored-by: cchaos <caroline.horn@elastic.co>
Co-authored-by: Caroline Horn <549577+cchaos@users.noreply.github.com>

--- a/src/components/flyout/_flyout.scss
+++ b/src/components/flyout/_flyout.scss
@@ -3,14 +3,16 @@
   animation: euiFlyout $euiAnimSpeedNormal $euiAnimSlightResistance;
 }
 
-// The actual size of the X button in pixels is a bit fuzzy because of all the
-// button padding so there is some pixel pushing here.
 .euiFlyout__closeButton {
   background-color: transparentize($euiColorEmptyShade, .1);
   position: absolute;
-  right: $euiSizeL - 7px;
-  top: $euiSizeL - 7px;
+  right: $euiSizeS;
+  top: $euiSizeS;
   z-index: 3;
+}
+
+.euiFlyoutBody__banner {
+  overflow-x: hidden;
 }
 
 /**
@@ -42,6 +44,38 @@ $flyoutSizes: (
 
     &.euiFlyout--maxWidth-default {
       max-width: map-get($sizing, max);
+    }
+  }
+}
+
+@each $modifier, $paddingAmount in $euiFlyoutPaddingModifiers {
+  .euiFlyout--#{$modifier} {
+
+    .euiFlyoutHeader {
+      padding: $paddingAmount $paddingAmount 0;
+    }
+
+    .euiFlyoutHeader--hasBorder {
+      padding-bottom: $paddingAmount;
+    }
+
+    .euiFlyoutBody__overflowContent {
+      padding: $paddingAmount;
+    }
+
+    .euiFlyoutBody__banner .euiCallOut {
+      padding-left: $paddingAmount;
+      padding-right: $paddingAmount;
+    }
+
+    .euiFlyoutFooter {
+      @if $paddingAmount == $euiSizeL {
+        padding: ($paddingAmount / 1.5) $paddingAmount;
+      } @else if $paddingAmount == $euiSize {
+        padding: ($paddingAmount * .75) $paddingAmount;
+      } @else {
+        padding: $paddingAmount;
+      }
     }
   }
 }
