--- a/src/components/flyout/_variables.scss
+++ b/src/components/flyout/_variables.scss
@@ -1,1 +1,8 @@
 $euiFlyoutBorder: $euiBorderThin !default;
+
+$euiFlyoutPaddingModifiers: (
+  'paddingNone': 0,
+  'paddingSmall': $euiSizeS,
+  'paddingMedium': $euiSize,
+  'paddingLarge': $euiSizeL
+) !default;
