[Page Layouts] Adding content props to EuiPageHeader for pre-determined page layout patterns (#4451)
* Added content type props to EuiPageHeader

* Replaced example usages with props

* Setting up a new $`euiPageDefaultMaxWidth` sass token

* Updating playground & docs

* Fixin amsterdam small and reverse shadows

* ‘Fixing’ paddingSize prop on EuiPageContent

* Adding custom options for `restrictWidth`

* Starting the switch to a new component `EuiPageHeaderContent`

* middle; simulate node

* Update `useIsWithinBreakpoints` to be conditional

* Moving the content to a new component

* Cleaning up

* Playground fix

* more customProps

* prevent format errors

* Some cleanup and fixing of logic

* Added `stretch` to the align prop and fixed tests

* cl & comments

* Docs clarity

* words

* Apply suggestions from code review

* Render `<header>` element in EuiPageHeader

* Adding `iconProps` to optional icon

* Renaming `rightSideContent` to `rightSideItems` for better clarity of what the prop type is

* Replacing `rightSideResponsive` with a more generic `rightSideGroupProps`

Also had to change the EuiFlexGroupProps to include ALL props (like Common)

* Apply suggestions from code review

Co-authored-by: Greg Thompson <thompson.glowe@gmail.com>

* Set deprecation notice for `panelPaddingSize`

Co-authored-by: Greg Thompson <thompson.glowe@gmail.com>
Co-authored-by: Dave Snider <dave.snider@gmail.com>

--- a/src-docs/src/components/guide_components.scss
+++ b/src-docs/src/components/guide_components.scss
@@ -96,7 +96,7 @@ $guideZLevelHighest: $euiZLevel9 + 1000;
   min-height: 100vh;
   background-color: $euiColorEmptyShade;
   border-left: $euiBorderThin;
-  max-width: 1000px;
+  max-width: $euiPageDefaultMaxWidth;
   margin-left: 240px;
 }
 
@@ -105,9 +105,14 @@ $guideZLevelHighest: $euiZLevel9 + 1000;
     min-height: 460px;
   }
 
-  div {
+  > div,
+  > div > div {
     background: transparentize($euiColorPrimary, .9);
   }
+}
+
+.guideDemo__highlightLayout--single {
+  background: transparentize($euiColorPrimary, .9);
 }
 
 .guideDemo__highlightSpacer {
