--- a/src/global_styling/variables/_index.scss
+++ b/src/global_styling/variables/_index.scss
@@ -12,6 +12,7 @@
 @import 'animations';
 @import 'typography';
 @import 'borders';
+@import 'responsive';
 @import 'shadows';
 @import 'states';
 @import 'z_index';
@@ -19,5 +20,6 @@
 @import 'buttons';
 @import 'form';
 @import 'header';
+@import 'page';
 @import 'panel';
 @import 'tool_tip';
