Add background to data grid content. Add more params to euiScrollBar (#4509)
* Add background to data grid content. Add more params to euiScrollBar

* cl

* Maintain height of datagrid when switching to a final page with less rows

Co-authored-by: Chandler Prall <chandler.prall@gmail.com>

--- a/src/global_styling/mixins/_helpers.scss
+++ b/src/global_styling/mixins/_helpers.scss
@@ -24,7 +24,7 @@
 }
 
 // Set scroll bar appearance on Chrome (and firefox).
-@mixin euiScrollBar {
+@mixin euiScrollBar($thumbColor: $euiColorDarkShade, $trackBackgroundColor: transparent) {
   // Firefox's scrollbar coloring cascades, but the sizing does not,
   // so it's being added to this mixin for allowing support wherever custom scrollbars are
   // sass-lint:disable-block no-misspelled-properties
@@ -37,14 +37,14 @@
   }
 
   &::-webkit-scrollbar-thumb {
-    background-color: transparentize($euiColorDarkShade, .5);
-    border: $euiScrollBarCorner solid transparent;
+    background-color: transparentize($thumbColor, .5);
+    border: $euiScrollBarCorner solid $trackBackgroundColor;
     background-clip: content-box;
   }
 
   &::-webkit-scrollbar-corner,
   &::-webkit-scrollbar-track {
-    background-color: transparent;
+    background-color: $trackBackgroundColor;
   }
 }
 
