--- a/src/components/datagrid/_data_grid.scss
+++ b/src/components/datagrid/_data_grid.scss
@@ -33,6 +33,7 @@
   max-width: 100%;
   width: 100%;
   z-index: 2; // Sits above the pagination below it, but below the controls above it
+  background: $euiColorLightestShade;
 }
 
 .euiDataGrid__controls {
@@ -115,6 +116,6 @@
 }
 
 .euiDataGrid__virtualized {
-  @include euiScrollBar;
+  @include euiScrollBar($euiColorDarkShade, $euiColorEmptyShade);
   scroll-padding: 0;
 }
