--- a/src/components/side_nav/_side_nav.scss
+++ b/src/components/side_nav/_side_nav.scss
@@ -2,45 +2,16 @@
 .euiSideNav__mobileToggle {
   display: none;
   border-bottom: $euiBorderThin;
-  padding: $euiSize $euiSizeL;
+  padding: $euiSize;
   width: 100%;
   text-align: left;
+  border-radius: 0 !important; // sass-lint:disable-line no-important
 
-  /**
-   * 1. This toggle also works with EUI link, but we need the outline
-   *    that comes with the focus state.
-   */
-  &:focus {
-    outline: none;
+  .euiButtonContent {
+    justify-content: space-between;
   }
 }
 
-.euiSideNav__mobileIcon {
-  fill: $euiColorPrimary;
-}
-
-.euiSideNav__mobileWrap {
-  display: flex;
-}
-
-.euiSideNav__mobileTitle {
-  flex-grow: 1;
-  color: $euiColorPrimary;
-}
-
-.euiSideNav__hideButton {
-  width: $euiSizeL;
-  height: $euiSizeL;
-  border-radius: $euiBorderRadius;
-  border: $euiBorderThin;
-  background: $euiColorEmptyShade;
-  position: absolute;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  right: -$euiSizeXXL;
-  top: $euiSizeXL;
-}
 
 @include euiBreakpoint('xs', 's') {
   /**
