--- a/src/themes/eui-amsterdam/global_styling/mixins/_typography.scss
+++ b/src/themes/eui-amsterdam/global_styling/mixins/_typography.scss
@@ -1,5 +1,16 @@
 // Font sizing extends, using rem mixin
 // All line-heights are aligned to baseline grid
+// sass-lint:disable no-vendor-prefixes
+
+// Redoing this mixin mainly to remove the letter-spacing
+@mixin euiFont {
+  font-family: $euiFontFamily;
+  font-weight: $euiFontWeightRegular;
+  letter-spacing: normal;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  font-kerning: normal;
+}
 
 @mixin euiFontSizeXS {
   @include fontSize($euiFontSizeXS);
