[EuiDatePicker] Fixed the bug of not seeing difference between the disabled/non-disabled times (#4524)
Co-authored-by: Caroline Horn <549577+cchaos@users.noreply.github.com>

--- a/src/components/date_picker/_date_picker.scss
+++ b/src/components/date_picker/_date_picker.scss
@@ -87,6 +87,10 @@
           &.react-datepicker__time-list-item--selected {
             color: $euiColorGhost;
           }
+          
+          &.react-datepicker__time-list-item--disabled{
+            color: $euiColorDisabledText
+          }
         }
       }
     }
