[EuiAvatar] Added isDisabled Property to the EuiAvatar tag (#4549)

--- a/src/components/avatar/_avatar.scss
+++ b/src/components/avatar/_avatar.scss
@@ -18,6 +18,11 @@
   border-radius: $euiBorderRadius;
 }
 
+.euiAvatar-isDisabled {
+  cursor: not-allowed;
+  filter: grayscale(100%);
+}
+
 // Modifiers for sizing.
 $avatarSizing: (
   s: (
