[EuiButtonIcon] Add display prop (#4466)
* Add display prop to EuiButtonIcon
* Add sizes
* Default theme updates
  -  Basically copy/pasted all .euiButton styles.
  - Created new `$euiButtonHeightXSmall` sass var
* Fixing up Amsterdam styles
* Changing `undefined` being the standard button type to `base`
* Fixing some component usages of EuiButtonIcon

Co-authored-by: cchaos <caroline.horn@elastic.co>

--- a/src/components/button/button_empty/_button_empty.scss
+++ b/src/components/button/button_empty/_button_empty.scss
@@ -29,7 +29,7 @@
   }
 
   &.euiButtonEmpty--xSmall {
-    height: $euiSizeL;
+    height: $euiButtonHeightXSmall;
     font-size: $euiFontSizeS;
   }
 
