--- a/src/components/button/button_icon/_variables.scss
+++ b/src/components/button/button_icon/_variables.scss
@@ -2,11 +2,10 @@
 $euiButtonIconTypes: (
   accent: $euiColorAccentText,
   danger: $euiColorDangerText,
-  disabled: $euiButtonColorDisabledText,
   ghost: $euiColorGhost,
   primary: $euiColorPrimaryText,
   subdued: $euiTextSubduedColor,
   success: $euiColorSuccessText,
-  text: $euiTextColor,
+  text: $euiColorDarkShade,
   warning: $euiColorWarningText,
 );
