--- a/src/components/resizable_container/_resizable_collapse_button.scss
+++ b/src/components/resizable_container/_resizable_collapse_button.scss
@@ -15,24 +15,16 @@
   // Remove animations from EuiButtonIcon because of the custom transforms
   animation: none !important; // sass-lint:disable-line no-important
   // Remove transition from EuiButtonIcon because of the custom transforms
-  transition: none !important; // sass-lint:disable-line no-important
-
-  &,
-  &:hover,
-  &:focus {
-    background-color: $euiColorLightestShade;
-  }
+  transition-property: background, box-shadow;
 
   &:focus {
     @include euiSlightShadowHover;
-    background-color: $euiColorLightShade;
   }
 
   &-isCollapsed {
     box-shadow: none;
     background: transparent;
     border-radius: 0;
-    display: flex; /* 2 */
   }
 
   &:not(:focus):not(:active):not(.euiResizableToggleButton-isVisible):not(.euiResizableToggleButton-isCollapsed) {
@@ -41,24 +33,21 @@
 }
 
 .euiResizableToggleButton--horizontal {
-  &.euiResizableToggleButton {
+  &.euiResizableToggleButton { // Extra layer of nesting to override EuiButtonIcon transforms on hover
     &.euiResizableToggleButton--after {
       right: 0;
       top: 50%; /* 1 */
       transform: translate(50%, -50%); /* 1 */
-      justify-content: center; /* 1, 2 */
 
       &.euiResizableToggleButton--top {
         top: 0;
         transform: translate(50%, $euiSize);
-        justify-content: flex-start; /* 2 */
       }
 
       &.euiResizableToggleButton--bottom {
         top: auto;
         bottom: 0;
         transform: translate(50%, -$euiSize);
-        justify-content: flex-end; /* 2 */
       }
     }
 
@@ -66,54 +55,54 @@
       left: 0;
       top: 50%; /* 1 */
       transform: translate(-50%, -50%); /* 1 */
-      justify-content: center; /* 1, 2 */
 
       &.euiResizableToggleButton--top {
         top: 0;
         transform: translate(-50%, $euiSize);
-        justify-content: flex-start; /* 2 */
       }
 
       &.euiResizableToggleButton--bottom {
         top: auto;
         bottom: 0;
         transform: translate(-50%, -$euiSize);
-        justify-content: flex-end; /* 2 */
       }
     }
 
     &.euiResizableToggleButton-isCollapsed {
-      flex-direction: column;
       top: 0 !important; // sass-lint:disable-line no-important
       bottom: 0 !important; // sass-lint:disable-line no-important
       transform: none !important; // sass-lint:disable-line no-important
-      // Give some space from the cross edges
-      padding-top: $euiSize;
-      padding-bottom: $euiSize;
+      height: 100%;
+
+      &.euiResizableToggleButton--top {
+        padding-top: $euiSize;
+        align-items: flex-start;  /* 2 */
+      }
+
+      &.euiResizableToggleButton--bottom {
+        padding-bottom: $euiSize;
+        align-items: flex-end;  /* 2 */
+      }
     }
   }
 }
 
 .euiResizableToggleButton--vertical {
-  &.euiResizableToggleButton {
-
+  &.euiResizableToggleButton { // Extra layer of nesting to override EuiButtonIcon transforms on hover
     &.euiResizableToggleButton--after {
       top: 100%;
       left: 50%; /* 1 */
       transform: translate(-50%, -50%); /* 1 */
-      justify-content: center; /* 1, 2 */
 
       &.euiResizableToggleButton--left {
         left: 0;
         transform: translate($euiSize, -50%);
-        justify-content: flex-start; /* 2 */
       }
 
       &.euiResizableToggleButton--right {
         left: auto;
         right: 0;
         transform: translate(-$euiSize, -50%);
-        justify-content: flex-end; /* 2 */
       }
     }
 
@@ -121,32 +110,35 @@
       bottom: 100%;
       left: 50%; /* 1 */
       transform: translate(-50%, 50%); /* 1 */
-      justify-content: center; /* 1, 2 */
 
       &.euiResizableToggleButton--left {
         left: 0;
         transform: translate($euiSize, 50%);
-        justify-content: flex-start; /* 2 */
       }
 
       &.euiResizableToggleButton--right {
         left: auto;
         right: 0;
         transform: translate(-$euiSize, 50%);
-        justify-content: flex-end; /* 2 */
       }
     }
 
     &.euiResizableToggleButton-isCollapsed {
-      flex-direction: row;
       top: 0 !important; // sass-lint:disable-line no-important
       bottom: 0 !important; // sass-lint:disable-line no-important
       left: 0 !important; // sass-lint:disable-line no-important
       transform: none !important; // sass-lint:disable-line no-important
       width: 100%;
-      // Give some space from the cross edges
-      padding-left: $euiSize;
-      padding-right: $euiSize;
+
+      &.euiResizableToggleButton--left {
+        padding-left: $euiSize;
+        justify-content: flex-start; /* 2 */
+      }
+
+      &.euiResizableToggleButton--right {
+        padding-right: $euiSize;
+        justify-content: flex-end; /* 2 */
+      }
     }
   }
 }
