Made EuiCard[description] optional if children is present (#4582)
Co-authored-by: Michail Yasonik <michail.yasonik@elastic.co>
Co-authored-by: Chandler Prall <chandler.prall@gmail.com>
Co-authored-by: cchaos <caroline.horn@elastic.co>

--- a/src/components/card/_card.scss
+++ b/src/components/card/_card.scss
@@ -172,10 +172,6 @@
   margin-top: $euiCardSpacing;
 }
 
-.euiCard--hasChildren .euiCard__description {
-  margin-bottom: $euiCardSpacing;
-}
-
 // Selectable cards don't work well without a border
 .euiCard--plain:not(.euiCard--isSelectable) {
   border: none;
@@ -201,7 +197,8 @@
 .euiCard__content {
   flex-grow: 1; /* 1 */
 
-  .euiCard__description {
+  .euiCard__description,
+  .euiCard__children {
     margin-top: $euiCardSpacing / 2;
   }
 
